--- a/style.css
+++ b/style.css
@@ -898,7 +898,7 @@ width: 21%;
 /* sport */
 
 }
-@media  screen and (min-width: 400px) and (max-width: 600px) {
+@media  screen and (min-width: 350px) and (max-width: 600px) {
 *{
         box-sizing: border-box;
     margin: 0;
@@ -1155,7 +1155,7 @@ transform: translateX(+3%);
 }
 .container2{
   width: 41%;
-  height: 77%;
+  height: 67%;
   
  
 }
@@ -1174,6 +1174,9 @@ transform: translateX(+3%);
   font-family: "Titillium Web", sans-serif;
   text-align: center;
 
+}
+.calc41{
+  width: 90.5%;
 }
 .im-sport:hover{
   transform: translateY(-5%);
@@ -1217,7 +1220,7 @@ details{
 }
 .guest-cont{
    font-family: "Titillium Web", sans-serif;
-   font-size: 100%;
+   font-size: 90%;
    color: rgb(71, 71, 70);
    margin-left: 2%;
    
@@ -1231,7 +1234,7 @@ details{
 /* convertors */
 .cur-section{
   width: 100%;
-  height: 100vh;
+  height: 110vh;
   background-color: #222;
 }
 .elements{
@@ -1321,7 +1324,7 @@ option:disabled{
   color: red;
 }
 .c-images{
-  margin: 50px 35px;
+  margin: 70px 12px;
   width: 90%;
 }
 
@@ -1331,6 +1334,10 @@ option:disabled{
 
 
 /* sport */
+
+.elm1{
+  height: 100%;
+}
 
 .bmr-inp{
   
@@ -1409,7 +1416,9 @@ width: 40%;
 }
 .nan2{
   display: block;
-  transform: translateY(-133%) translateX(110%);
+  transform: translateY(-100%) translateX(+135%);
+  margin: 0;
+  padding: 0;
 }
 .opt{
   color: red;
